Add .gitignore, update README, requirements, and implement core functionalities
- Added .gitignore to exclude unnecessary files.
- Updated README.md with project overview, features, and getting started instructions.
- Enhanced requirements.txt with additional dependencies for quantum computing and development.
- Implemented SimpleQuantumClassifier in quantum_models.py with training and prediction methods.
- Created run_experiment.py for end-to-end testing on the Iris dataset.
- Developed streamlit_app.py for an interactive demo of the quantum classifier.
- Added backend_utils.py for managing Qiskit backends.
- Included test_models.py for future unit tests.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,21 @@
+# Core scientific stack
 numpy
 scipy
 matplotlib
 scikit-learn
+pandas
+seaborn  # optional, nicer visualizations
+
+# Quantum computing frameworks
 qiskit
+qiskit-aer            # simulators (Aer)
+qiskit-machine-learning  # hybrid quantum-classical ML
+cirq                  # Google quantum simulator
+tensorflow
+tensorflow-quantum    # quantum ML with TensorFlow
+
+# Notebooks & dev tools
 jupyter
+notebook
+jupyterlab
+python-dotenv         # for loading IBM Quantum API keys safely
