--- a/requirements.txt
+++ b/requirements.txt
@@ -2,20 +2,16 @@
 numpy
 scipy
 matplotlib
-scikit-learn
 pandas
-seaborn  # optional, nicer visualizations
+scikit-learn
 
-# Quantum computing frameworks
+# Quantum computing
 qiskit
-qiskit-aer            # simulators (Aer)
-qiskit-machine-learning  # hybrid quantum-classical ML
-cirq                  # Google quantum simulator
-tensorflow
-tensorflow-quantum    # quantum ML with TensorFlow
+qiskit-aer
 
-# Notebooks & dev tools
-jupyter
-notebook
-jupyterlab
-python-dotenv         # for loading IBM Quantum API keys safely
+# App
+streamlit
+python-dotenv
+
+# Optional (visualizations)
+seaborn
