--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
 # Core scientific stack
 numpy==1.26.4
-scipy==1.13.1
-matplotlib==3.9.0
-pandas==2.2.2
-scikit-learn==1.5.0
+scipy==1.13.0
+matplotlib==3.8.4
+pandas==2.2.1
+scikit-learn==1.4.2
 
-# Quantum computing (modern versions with Sampler)
-qiskit==1.0.2
+# Quantum computing (use only what's needed)
+qiskit-terra==1.0.2
 qiskit-aer==0.13.3
 
 # App
-streamlit==1.37.0
+streamlit==1.32.2
 python-dotenv==1.0.1
 
-# Optional (visualizations)
+# Optional visualization
 seaborn==0.13.2
