--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,16 @@
-# Core scientific stack
-numpy==1.26.4
-scipy==1.13.0
-matplotlib==3.8.4
-pandas==2.2.1
-scikit-learn==1.4.2
+numpy==1.24.4
+scipy==1.10.1
+matplotlib==3.7.2
+pandas==2.1.4
+scikit-learn==1.3.2
 
-# Quantum computing (use only what's needed)
-qiskit-terra==1.0.2
-qiskit-aer==0.13.3
+# Quantum computing
+qiskit==0.45.3
+qiskit-aer==0.12.2
 
 # App
 streamlit==1.32.2
 python-dotenv==1.0.1
 
 # Optional visualization
-seaborn==0.13.2
+seaborn==0.12.2
