--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-numpy==1.24.4
+# Core scientific stack
+numpy==1.26.4
 scipy==1.10.1
 matplotlib==3.7.2
 pandas==2.1.4
 scikit-learn==1.3.2
 
-# Quantum computing
+# Quantum computing (compatible bundle)
 qiskit==0.45.3
 qiskit-aer==0.12.2
 
