--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,6 @@
 numpy==1.26.4
 scipy==1.11.4
-matplotlib==3.7.2
 pandas==2.1.4
-scikit-learn==1.3.2
-
-qiskit==0.45.3
+qiskit-terra==1.0.2
 qiskit-aer==0.12.2
-
-streamlit==1.32.2
-python-dotenv==1.0.1
-seaborn==0.12.2
+streamlit>=1.32
