--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
+# numeric stack (Py3.11 wheels available)
 numpy==1.26.4
 scipy==1.11.4
 pandas==2.1.4
+
+# qiskit pins that have Py3.11 wheels
 qiskit-terra==1.0.2
 qiskit-aer==0.12.2
-streamlit>=1.32
+
+# app
+streamlit>=1.32,<2
